--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fastify": "^3.12.0",
     "fastify-cors": "^5.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.16"
+    "mongoose": "^5.11.16",
+    "shortid": "^2.2.16"
   }
 }
